add last routes and add new tests
